Masaüstü kısmı-Main yapıldı

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>spotiflow</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -29,6 +32,166 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="main-sidebar">
+        <nav class="main-menu">
+          <a href="/">Ana Sayfa</a>
+          <a href="/">Keşfets</a>
+          <a href="/">Kitaplığım</a>
+          <a href="/">Çalma Listesi</a>
+          <a href="/">Ayarlar</a>
+        </nav>
+      </div>
+      <div class="main-content">
+        <div class="main-content-items">
+            <div class="main-content-item">
+              <h2>Öne Çıkan Listesi</h2>
+              <div class="main-content-cards">
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/6009651/pexels-photo-6009651.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Güne Başla</h4>
+                    <p>Gün boyu enerji veren parçalar</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/1540406/pexels-photo-1540406.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Lo-Fi Focus</h4>
+                    <p>Derin çalışma listesi</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/3971985/pexels-photo-3971985.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Workout Hits</h4>
+                    <p>Tempoyu yükselt</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Chill Vibes</h4>
+                    <p>Rahatlatan tınılar</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/1212487/pexels-photo-1212487.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Türkçe Pop</h4>
+                    <p>Güncel yerli hitler</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/1368382/pexels-photo-1368382.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Retro Classics</h4>
+                    <p>80'ler 90'lar klasikleri</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/25338211/pexels-photo-25338211.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Yabancı Pop</h4>
+                    <p>Gücel pop müzikleri</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/16721696/pexels-photo-16721696.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Remix</h4>
+                    <p>Çılgın phonk listesi</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="main-content-item">
+              <h2>Yeni Albümler</h2>
+              <div class="main-content-cards">
+                <div class="main-content-card albums">
+                  <img src="https://images.pexels.com/photos/25785476/pexels-photo-25785476.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Skyline</h4>
+                    <p>Nova</p>
+                  </div>
+                </div>
+                <div class="main-content-card albums">
+                  <img src="https://images.pexels.com/photos/29234535/pexels-photo-29234535.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Monochrome</h4>
+                    <p>Kite</p>
+                  </div>
+                </div>
+                <div class="main-content-card albums">
+                  <img src="https://images.pexels.com/photos/16721641/pexels-photo-16721641.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Echoes</h4>
+                    <p>Fjord</p>
+                  </div>
+                </div>
+                <div class="main-content-card albums">
+                  <img src="https://images.pexels.com/photos/25338278/pexels-photo-25338278.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Neon</h4>
+                    <p>Aria</p>
+                  </div>
+                </div>
+                <div class="main-content-card">
+                  <img src="https://images.pexels.com/photos/25338201/pexels-photo-25338201.jpeg" alt="">
+                  <div class="list-inform">
+                    <h4>Podcastler</h4>
+                    <p>Pöpüler podcastler</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="main-content-item">
+              <h2>Kitaplığım</h2>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>Başlık</th>
+                      <th>Sanatçı</th>
+                      <th>Albüm</th>
+                      <th>Süre</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>City Lights</td>
+                      <td>Luma</td>
+                      <td>Night Shift</td>
+                      <td>3:24</td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>Paper Planes</td>
+                      <td>Kingfisher</td>
+                      <td>Feather</td>
+                      <td>2:58</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>Drift</td>
+                      <td>Aloe</td>
+                      <td>Drift</td>
+                      <td>4:02</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>Granite</td>
+                      <td>Zephyr</td>
+                      <td>Mass</td>
+                      <td>3:11</td>
+                    </tr>
+                  </tbody>
+                </table>
+            </div>
+        </div>
+      </div>
+    </main>
   </body>
   <script>
     const searchInput = document.querySelector('.header-search input');
