Masaüstü kısmı-Footer yapıldı

--- a/index.html
+++ b/index.html
@@ -186,7 +186,35 @@
         </div>
       </div>
     </main>
-
+    <footer>
+      <div class="footer-content">
+        <div class="footer-music-name">
+          <img src="https://images.pexels.com/photos/1540406/pexels-photo-1540406.jpeg" alt="">
+          <div class="music-name-inform">
+            <h4>City Lights</h4>
+            <p>Luma</p>
+          </div>
+        </div>
+        <div class="footer-button">
+          <div class="backward-step">
+            <i class="fa-solid fa-backward-step"></i>
+          </div>
+          <div class="pause">
+            <i class="fa-solid fa-pause"></i>
+          </div>
+          <div class="forward">
+            <i class="fa-solid fa-forward-step"></i>
+          </div>
+        </div>
+        <div class="footer-time">
+          <span>0:12</span>
+          <div class="times">
+            <div class="time"></div>
+          </div>
+          <span>3:24</span>
+        </div>
+      </div>
+    </footer>
   </body>
   <script>
     const searchInput = document.querySelector('.header-search input');
